app/css/style.css
body {
	font-family: Fira Sans, Calibri, Tahoma, sans-serif;
	font-size: 14px;

    overflow: hidden;
}

header {
    position: absolute;
    z-index: 10;

    top: 0;
    left: 0;
    width: 100%;
    height: 40px;
    background: linear-gradient(to bottom,  #cacaca, #e7e7e6);
    box-shadow: 0 1px 1px #cacaca;

    box-sizing: border-box;
    padding-left: 45px;
    
    overflow: hidden;
}

header button {
    position: absolute;
    width: 32px;
    height: 32px;
    padding: 0;
    top: 4px;
    left: 4px;
    border: none;
    border-radius: 0;

    color: #000;
    background: #f7df1d;
    box-shadow: 1px 0 3px #cbb;
    text-shadow: 1px 1px 1px #fee;

    cursor: pointer;

    font-size: 16px;
    line-height: 32px;
    text-align: center;
    vertical-align: middle;
}
header button:before {
    content: "ES";
}
body[data-page] header button:before {
    content: "\25c0";
}

body[data-page] header button:active {
    color: #555;
    background: #f8e63d;
}

header h1 {
    color: #000;
    text-shadow: 1px 1px 1px #fff;
    font-size: 20px;
    line-height: 36px;
    margin: 3px 0 0;
    letter-spacing: 0px;

    transition: all 1s ease;
}
body[data-page] header h1 {
    margin-top: -37px;
}
header h2 {
    color: #878787;
    text-shadow: 1px 1px 1px #fff;
    text-transform: uppercase;
    font-size: 12px;
    line-height: 12px;
    margin: 5px 0 0;
}
header h3 {
    color: #000;
    text-shadow: 1px 1px 1px #fff;
    font-size: 18px;
    line-height: 18px;
    margin: 2px 0 0;
}

/* demo code sandbox */
.sandbox {
	padding-bottom: 4em !important;

	margin-top: -10px !important;
	background: #414141 !important;
	box-shadow: 0 0 10px #272822 inset;
}

.sandbox img {
	width: 96%;
	margin: 0 2%;

	box-shadow: 1px 1px 1px 3px #000;
}

.sandbox + button {
    position: relative;
    top: -2.5em;
    display: block;
	margin: auto;
}

/* pages */
main,
article {
    position: absolute;
    top: 0;
    left: 0;

    width: 100%;
    height: 100%;
    overflow: auto;

    padding: 40px 10px 10px;
    box-sizing: padding-box;

    transition: all 1s ease;
}

/* main page */
main {
    z-index: 1;    
}
body[data-page] main {
    opacity: 0;
}

main h1 {
    font-size: 20px;
    text-align: center;
    color: #444;
    text-shadow: 0px 1px 1px #c5c5c5;
}
main h2 {
    font-size: 18px;
    text-align: center;
    color: #000;
    text-shadow: 0px 1px 1px #c5c5c5;
    margin-bottom: 2px;
}

main button {
    display: block;
    margin: 2px auto 10px;

    font-size: 18px;
    padding: 6px 10px;
    width: 80%;

    cursor: pointer;

    color: #dedede;
    background: linear-gradient(to bottom, #a1a1a1, #545454 );
    border: 1px solid #444;
    border-radius: 0;
    box-shadow: 0 0 3px 1px #777 inset;

	max-width: 16em;
}
main button:focus {
    color: #000;
    background: linear-gradient(to bottom, #f7df1d, #ecc );
    border: 1px solid #999;
    box-shadow: 0 0 3px 1px #cbcbcb inset;
}

/* demo pages */
article {
    z-index: 2;

    transition: all 1s ease;
    transform: translateY(100%);
    -webkit-transform: translateY(100%);
}
body[data-page] article.active {
    transform: translateY(0);
	-webkit-transform: translateY(0);
}

/* demo formatting */
article > :last-child {
    margin-bottom: 4em !important;
}
article > p {
    line-height: 140%;
    margin: 0 .5em .5em;
}

article > p code {
    font-size: 92%;
    background: #f0f0f0;
    padding: 0 .33em;
    border-radius: .33em;
    color: #606060;
    border: 1px solid #e0e0e0;
}
article > p a > code {
	color: inherit;
}

article > p > h1 {
	font-size: 1.8em;
	margin: 0.6em 0;
}
article > p > h2 {
	font-size: 1.4em;
	margin: 0.4em 0;
}
article > p > h3 {
	font-size: 1.25em;
	margin: 0.3em 0;
}

article > p > h2:first-child,
article > p > h3:first-child {
	margin-top: 1em;
}

article > p a {
    color: #00ace9;
    text-decoration: none;
}
article > p a:focus,
article > p a:hover,
article > p a:active {
    text-decoration: underline;
}


/* On small screens */
@media only screen and (max-width: 540px) {
	/* smaller fonts */
	body {
		font-size: 12px;
	}
	
	/* smaller fonts, reduce tab size to 2 characters, enable wrapping */
	code[class*="language-"], pre[class*="language-"] {
		font-size: 10px;

		-moz-tab-size: 2;
		-o-tab-size: 2;
		tab-size: 2;

		white-space: pre-wrap;
	}
}



/* On large screens */
@media only screen and (min-width: 541px) {
	/* maximize column width */
	article > * {
		max-width: 800px;
	}

	/* left-align the button that executes the demo code */
	.sandbox + button {
		margin: 0 1em;
	}
}

